Conditional evaluation article code included.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,14 @@
 Message = Message loaded from messager.properties!
+
+month.jan = January
+month.feb = February
+month.mar = March
+month.apr = April
+month.may = May
+month.jun = June
+month.jul = July
+month.aug = August
+month.sep = September
+month.oct = October
+month.nov = November
+month.dec = December
